--- a/public/manifest-public.json
+++ b/public/manifest-public.json
@@ -2,8 +2,8 @@
   "name": "PSH SUP – Vie du campus",
   "short_name": "PSH SUP",
   "description": "Application officielle du BDE PSH SUP",
-  "start_url": "/BDE-PSH-SUP/index.html",
-  "scope": "/BDE-PSH-SUP/",
+  "start_url": "/BDE-PSH-SUP/public/index.html",
+  "scope": "/BDE-PSH-SUP/public/",
   "display": "standalone",
   "background_color": "#f5f5f5",
   "theme_color": "#b23a2c",
