--- a/admin/manifest.json
+++ b/admin/manifest.json
@@ -1,13 +1,9 @@
 {
-  "name": "PSH SUP – Admin BDE",
+  "name": "Admin BDE PSH",
   "short_name": "Admin BDE",
-  "description": "Interface d’administration du BDE PSH SUP",
   "start_url": "/bdepshsup/admin/admin-dashboard.html",
   "scope": "/bdepshsup/admin/",
   "display": "standalone",
-  "background_color": "#f5f5f5",
-  "theme_color": "#b23a2c",
-  "orientation": "portrait",
   "icons": [
     {
       "src": "/bdepshsup/icons/admin/icon-192.png",
