--- a/admin/manifest.json
+++ b/admin/manifest.json
@@ -4,6 +4,8 @@
   "start_url": "/bdepshsup/admin/admin-dashboard.html",
   "scope": "/bdepshsup/admin/",
   "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#b23a2c",
   "icons": [
     {
       "src": "/bdepshsup/icons/admin/icon-192.png",
